animation fixes. added width property to body element to help prevent overflow on x axis. new favicon

--- a/assets/animation.css
+++ b/assets/animation.css
@@ -1,7 +1,9 @@
-.night {
+/* rgb(165, 155, 255) */
+
+.starContainer {
     position: relative;
-    max-width: 70%;
-    height: 100%;
+    max-width: 90%;
+    height: 90%;
     float: left;
     transform: rotateZ(45deg);
     overflow: inherit; 
@@ -11,13 +13,14 @@
 }
 .shooting_star {
     position: absolute;
-    left: 10%;
     top: 50%;
+    left: 10%;
     height: 2px;
-    background: linear-gradient(-45deg, rgba(95, 145, 255, 1), rgba(0, 0, 255, 0));
+    background: linear-gradient(-45deg,rgb(165, 155, 255), rgba(0, 0, 255, 0));
     border-radius: 999px;
     filter: drop-shadow(0 0 6px rgba(105, 155, 255, 1));
     animation: tail 8000ms ease-in-out infinite, shooting 8000ms ease-in-out infinite;
+    overflow-x:hidden;
 }
 .shooting_star::before {
     content: '';
@@ -25,7 +28,7 @@
     top: calc(50% - 1px);
     right: 0;
     height: 2px;
-    background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgba(95, 145, 255, 1), rgba(0, 0, 255, 0));
+    background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgb(165, 155, 255), rgba(0, 0, 255, 0));
     transform: translateX(50%) rotateZ(45deg);
     border-radius: 100%;
     animation: shining 8000ms ease-in-out infinite;
@@ -36,8 +39,7 @@
     top: calc(50% - 1px);
     right: 0;
     height: 2px;
-    background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgba(95, 145, 255, 1), rgba(0, 0, 255, 0));
-    transform: translateX(50%) rotateZ(45deg);
+    background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgba(105, 155, 255, 1), rgba(0, 0, 255, 0));
     border-radius: 100%;
     animation: shining 8000ms ease-in-out infinite;
     transform: translateX(50%) rotateZ(-45deg);
@@ -208,7 +210,7 @@
         width: 0;
    }
     30% {
-        width: 100px;
+        width: 2.5em;
    }
     100% {
         width: 0;
@@ -219,7 +221,7 @@
         width: 0;
    }
     50% {
-        width: 30px;
+        width: 1.25em;
    }
     100% {
         width: 0;
@@ -230,18 +232,6 @@
         transform: translateX(0);
    }
     100% {
-        transform: translateX(500px);
+        transform: translateX(35rem);
    }
-}
-
-
-@media only screen and (min-width: 300px) and (max-width: 801) {
-    @keyframes shooting {
-        0% {
-            transform: translateX(0);
-        }
-        100% {
-            transform: translateX(200px);
-        }
-    }
 }
